--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -16,3 +16,17 @@
     margin:0;
     padding:0;
   }
+
+  body {
+      background: image_url('crossword.png');
+  }
+
+  .navbar {
+      background: image_url('stardust.png');
+      box-shadow: 0px 1px 3px #2a2a2a;
+  }
+
+  body {
+    background: url('/assets/crossword.png');
+    font-family: Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, "DejaVu Serif", "Bitstream Vera Serif", "Liberation Serif", Georgia, serif;
+  }
