Creating the place form

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -30,3 +30,11 @@
     background: url('/assets/crossword.png');
     font-family: Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, "DejaVu Serif", "Bitstream Vera Serif", "Liberation Serif", Georgia, serif;
   }
+
+  .navbar-inverse .navbar-brand {
+    color: #E3E85A;
+    font-family: "Helvetica Neue", Helvetica, sans-serif;
+    font-weight: 600;
+    letter-spacing: -0.3px;
+    font-size: 26px;
+  }
