--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,9 +1,9 @@
-<h2>Sign up</h2>
-
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<div class="booyah-box col-10 offset-1">
+  <h2>Sign up</h2>
+  <br />
+  <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= f.error_notification %>
-
-  <div class="form-inputs">
+   <div class="form-inputs">
     <%= f.input :email,
                 required: true,
                 autofocus: true,
@@ -15,11 +15,12 @@
     <%= f.input :password_confirmation,
                 required: true,
                 input_html: { autocomplete: "new-password" } %>
-  </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+   </div>
+   <br />
+   <div class="form-actions">
+    <%= f.button :submit, "Sign up", class: 'btn btn-primary' %>
+   </div>
+ <% end %>
+ <br />
+ <%= render "devise/shared/links" %>
+</div>
