--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -7,7 +7,19 @@
     <% if place.user.present? %>
       <small><%= place.user.email %></small>
     <% end %>
-  </div>
+
+<% if place.comments.present? %>
+ <div class="col-12">
+  <blockquote>
+    <% if place.comments.last.humanized_rating.present? %>
+      <b><%= place.comments.last.humanized_rating %></b> -
+    <% end %>
+    <%= place.comments.last.message %>
+    <small><%= place.comments.last.user.email %></small>
+  </blockquote>
+ </div>
+<% end %>
+</div>
 <% end %>
 
 <%= will_paginate @places, render: BootstrapPagination::Rails, previous_label: "Older", next_label: "Newer", inner_window: 1, outer_window: 0; %>
