updated pic uploader attempt

--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -93,4 +93,9 @@
       </blockquote>
     </div>
   <% end %>
+  
+    <%= simple_form_for @photo, url: place_photos_path(@place) do |f| %>
+        <%= f.input :picture %>
+        <%= f.submit "Upload Photo", class: 'btn btn-primary' %>
+  <% end %>
 </div>
